WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303301
[visionOS] spatial video don't play when MediaPlayerPrivateMediaSourceAVFObjC runs in the WebContent process
https://bugs.webkit.org/show_bug.cgi?id=303301
Summary
[visionOS] spatial video don't play when MediaPlayerPrivateMediaSourceAVFObjC...
Jean-Yves Avenard [:jya]
Reported
2025-12-01 01:30:10 PST
The CMSampleBuffer<->MediaSampleBlock doesn't handle the spatial metadata dictionary and the information is lost.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-01 01:30:16 PST
<
rdar://problem/165605223
>
Jean-Yves Avenard [:jya]
Comment 2
2025-12-01 01:35:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54620
Jean-Yves Avenard [:jya]
Comment 3
2025-12-06 05:22:15 PST
rdar://165954788
Jean-Yves Avenard [:jya]
Comment 4
2025-12-07 17:32:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55006
EWS
Comment 5
2025-12-16 04:02:00 PST
Committed
304503@main
(70664c036656): <
https://commits.webkit.org/304503@main
> Reviewed commits have been landed. Closing PR #55006 and removing active labels.
Jonathan Bedard
Comment 6
2025-12-16 08:58:02 PST
Reopened Bugzilla. REGRESSION(
304503@main
): Broke Internal visionOS Debug builds, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=304259
.
Jean-Yves Avenard [:jya]
Comment 7
2025-12-16 14:41:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55511
EWS
Comment 8
2025-12-16 16:02:25 PST
Committed
304556@main
(09b9e9accc8a): <
https://commits.webkit.org/304556@main
> Reviewed commits have been landed. Closing PR #55511 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug