[visionOS] spatial video don't play when MediaPlayerPrivateMediaSourceAVFObjC runs in the WebContent process https://bugs.webkit.org/show_bug.cgi?id=303301 rdar://165605223

Reviewed by NOBODY (OOPS!).

Add support for extracting the Spatial Metadata from the AVFormatDescription.

Manually tested.
* Source/WebCore/platform/TrackInfo.h:
(WebCore::VideoInfo::create):
(WebCore::VideoInfo::VideoInfo):
* Source/WebCore/platform/graphics/cocoa/CMUtilities.h:
* Source/WebCore/platform/graphics/cocoa/CMUtilities.mm:
(WebCore::canCopyFormatDescriptionExtension):
(WebCore::extractSpatialVideoMetadata):
(WebCore::createVideoInfoFromFormatDescription):
* Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm: Use new utility method extractSpatialVideoMetadata
(WebCore::cfDictionaryCreateCombined):
(WebCore::copyDescriptionExtensionValuesIfNeeded):
(WebCore::canCopyFormatDescriptionExtension): Deleted.
* Source/WebKit/Scripts/webkit/opaque_ipc_types.tracking.in: The spatial metadata is opaque content and dynamic in nature.
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in: